fix cursor for collapse

--- a/src/assets/sass/components/multisigDetailsPage.scss
+++ b/src/assets/sass/components/multisigDetailsPage.scss
@@ -140,6 +140,7 @@
   .owner-actions {
     .card {
       border: none;
+      cursor: initial;
       border-radius: unset;
       border-bottom: 1px solid #f1f1f1 !important;
       background-color: #fafafa;
